@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title US003 Domain Model

'class Platform {
'  -description
'}
class Employee {
    name
    birthdate
    email/phone
    admisson date
    VAT number
    address
    role
}

class Collaborator{

}

class Job{
    name
    description
}

class HumanResourcesManager{
}

HumanResourcesManager "1" - "1..*" Collaborator : registers >
Collaborator "1" -- "1" Job : has >
HumanResourcesManager "1" -- "1..*" Job : registers >
Employee "1" -- "1..*" HumanResourcesManager : is >
Employee "1" -- "1..*" Collaborator : is >


@enduml